--- a/BlazorHyblid-ImageEditor.csproj
+++ b/BlazorHyblid-ImageEditor.csproj
@@ -64,13 +64,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AntDesign" Version="0.18.3" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+        <PackageReference Include="MudBlazor" Version="6.19.1" />
     </ItemGroup>
 
     <ItemGroup>
